--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
 
     <div class="header">
         <div class="head_logo">
-            <img class="logo" src="logo.png">
+            <img class="logo" src="pics/logo.png">
         </div>
         <div class="head_text">
             <a href="#" class="text">About</a>
@@ -38,7 +38,7 @@
                     and hours of number crunching? We,ve got you covered.
                 </span>
             </p>
-            <img class="phone-1" src="/banner.png">
+            <img class="phone-1" src="pics/banner.png">
     </div>
 
     <p class="features-text">Tons of Features</p>
@@ -48,42 +48,42 @@
             <div>
                 <div class="column_group1">
                     <p>Budget Multiple Projects <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
-                    <img src="/1.png">
+                    <img src="pics/1.png">
                 </div>
                 <div class="column_group1">
                     <p>Invoice Scan & Auto-Import<span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>
-                    <img src="/2.png">
+                    <img src="pics/2.png">
                 </div>
                 <div class="column_group1">
                     <p>Inventory Tracker <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
-                    <img src="/3.png">
+                    <img src="pics/3.png">
                 </div>
                 <div class="column_group1">
                     <p>Approval System with Levels <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
-                    <img src="/4.png">
+                    <img src="pics/4.png">
                 </div>
             </div>
         </div>
         <div class="column2">
-            <img src="/phone.png">
+            <img src="pics/phone.png">
         </div>
         <div class="column3">
             <div>
                 <div class="column_group3">
-                    <img src="/5.png">
+                    <img src="pics/5.png">
                     <p>Asign Project Members <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                     
                 </div>
                 <div class="column_group3">
-                    <img src="/6.png">
+                    <img src="pics/6.png">
                     <p>Dashbord <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>                 
                 </div>
                 <div class="column_group3">
-                    <img src="/7.png">
+                    <img src="pics/7.png">
                     <p>Duplicate Detectors <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                 </div>
                 <div class="column_group3">
-                    <img src="/8.png">
+                    <img src="pics/8.png">
                     <p>Integration with 3rd Party Tools <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>                  
                 </div>
             </div>
@@ -94,21 +94,21 @@
 
     <div class="reviews">
         <div class="r">
-            <img src="/prof1.png">
+            <img src="pics/prof1.png">
             <p class="name">Billy J. Olds <span>TCC Inc.</span></p>
-            <img class="star" src="/stars.png">
+            <img class="star" src="pics/stars.png">
             <p class="desc">lorem ipsum dolor sit amet, consectetur adipiscing eft. Maecenas dapibus odio at varius vestibulum. Nam sollicitudin justo.</p>
         </div>
         <div class="r">
-            <img src="/prof2.png">
+            <img src="pics/prof2.png">
             <p class="name">Jeromie T. Amstrong <span>ONPB Corp</span></p>
-            <img class="star" src="/stars.png">
+            <img class="star" src="pics/stars.png">
             <p class="desc">lorem ipsum dolor sit amet, consectetur adipiscing eft. Maecenas dapibus odio at varius vestibulum. Nam sollicitudin justo sod nibh vivorra, id consectetur lacus semper.</Label></p>
         </div>
         <div class="r">
-            <img src="/prof3.png">
+            <img src="pics/prof3.png">
             <p class="name">William G. Grace <span>C Collective</span></p>
-            <img class="star" src="/stars.png">
+            <img class="star" src="pics/stars.png">
             <p class="desc">lorem ipsum dolor sit amet, consectetur adipiscing eft. Maecenas dapibus odio at varius vestibulum. Nam sollicitudin justo sod nibh vivorra, id consectetur. </Label></p>
         </div>
     </div>
@@ -117,11 +117,11 @@
         <p>Ready to Simplify your Finances?</p>
 
         <div>
-            <img src="/mail.png">
+            <img src="pics/mail.png">
             <p class="contact"> hello@gokozo.com</p>
         </div>
         <div>
-            <img src="/call.png">
+            <img src="pics/call.png">
             <p class="contact"> 9123134092</p>
         </div>
         
