--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img class="phone-1" src="pics/banner.png">
     </div>
 
-    <p class="features-text">Tons of Features</p>
+    <p class="features-text">Tons of Features</p><br><br>
 
     <div class="page2-content">
         <div class="column1">
@@ -71,12 +71,12 @@
             <div>
                 <div class="column_group3">
                     <img src="pics/5.png">
-                    <p>Asign Project Members <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
+                    <p>Assign Project Members <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                     
                 </div>
                 <div class="column_group3">
                     <img src="pics/6.png">
-                    <p>Dashbord <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>                 
+                    <p>Dashboard <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>                 
                 </div>
                 <div class="column_group3">
                     <img src="pics/7.png">
