--- a/index.html
+++ b/index.html
@@ -47,44 +47,44 @@
         <div class="column1">
             <div>
                 <div class="column_group1">
-                    <p>Budget Multiple Projects <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
+                    <p class="page2-text">Budget Multiple Projects <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                     <img src="pics/1.png">
                 </div>
                 <div class="column_group1">
-                    <p>Invoice Scan & Auto-Import<span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>
+                    <p class="page2-text">Invoice Scan & Auto-Import<span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>
                     <img src="pics/2.png">
                 </div>
                 <div class="column_group1">
-                    <p>Inventory Tracker <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
+                    <p class="page2-text">Inventory Tracker <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                     <img src="pics/3.png">
                 </div>
                 <div class="column_group1">
-                    <p>Approval System with Levels <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
+                    <p class="page2-text">Approval System with Levels <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                     <img src="pics/4.png">
                 </div>
             </div>
         </div>
         <div class="column2">
-            <img src="pics/phone.png">
+            <img class="phone2" src="pics/phone.png">
         </div>
         <div class="column3">
             <div>
                 <div class="column_group3">
                     <img src="pics/5.png">
-                    <p>Assign Project Members <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
+                    <p class="page2-text">Assign Project Members <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                     
                 </div>
                 <div class="column_group3">
                     <img src="pics/6.png">
-                    <p>Dashboard <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>                 
+                    <p class="page2-text">Dashboard <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </span></p>                 
                 </div>
                 <div class="column_group3">
                     <img src="pics/7.png">
-                    <p>Duplicate Detectors <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
+                    <p class="page2-text">Duplicate Detectors <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>
                 </div>
                 <div class="column_group3">
                     <img src="pics/8.png">
-                    <p>Integration with 3rd Party Tools <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>                  
+                    <p class="page2-text">Integration with 3rd Party Tools <span class="points_desc">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</span></p>                  
                 </div>
             </div>
         </div>
